[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/level1 - forest/enemies/dinosaur/04.png" type="Texture" id=1]
[ext_resource path="res://assets/level1 - forest/enemies/dinosaur/01.png" type="Texture" id=2]
[ext_resource path="res://assets/level1 - forest/enemies/dinosaur/02.png" type="Texture" id=3]
[ext_resource path="res://assets/level1 - forest/enemies/dinosaur/03.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemies/level 1/Dinosaur.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 14 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 96.0833

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0, 10 )

[node name="Dinosaur" type="Area2D"]
script = ExtResource( 5 )

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -2, 2 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="DetectionRange" type="Area2D" parent="."]

[node name="DetectionRange" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 3 )

[node name="GroundDetect" type="Area2D" parent="."]

[node name="GroundDetect" type="CollisionShape2D" parent="GroundDetect"]
position = Vector2( -8, 26 )
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Dinosaur_body_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="GroundDetect" to="." method="_on_GroundDetect_body_exited"]
